Agregue Lorem a footer

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             </ul>
         </nav>
         <h3 class="footerText"> Copyright @2021 Warrior</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum asperiores qui, <br>
+             quae quo provident ab dolore iure amet numquam.</p>
     </footer>
 
 </body>
