Git aplicado a index y contacto

--- a/Bicicletas.html
+++ b/Bicicletas.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <header>
+    <header class="headBic">
         <div class="bic">
             <img src="./img/Logo.png" alt="biker con montalas de fondo">
-            <h2 class="h2">Bicicletas</h2>
+            <h2 class="h2Bic">Bicicletas</h2>
         </div>
         <br>
         <div>
@@ -58,7 +58,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="footBic">
         <div class="socialBic">
             <h3>Nuestras redes</h3>
         </div>
@@ -71,7 +71,6 @@
         </ul>
 
         <nav>
-            <hr>
             <ul class="menuFooter">
                 <li><a href="Index.html"> Inicio</a></li>
                 <li><a href="Accesorios.html"> Accesorios</a></li>
