--- a/Contacto.html
+++ b/Contacto.html
@@ -11,10 +11,11 @@
     <title>Estilo Biker/Contacto</title>
 </head>
 
-<body class="grilla">
-    <header class="header1">
-        <div class="cont1">
-            <img src="./img/Logo.png" alt="biker con montalas de fondo">
+<body>
+    <div class="container">
+    <header>
+        <div class="head">
+            <img class="contImg" src="./img/Logo.png" alt="biker con montalas de fondo">
             <h1 class="h1Cont">Contacto</h1>
         </div>
 <br>
@@ -32,7 +33,8 @@
     </header>
 
 
-    <main class="main1">
+    <main>
+        <div class="main">
         <br>
         <section class="form">
             <form action="#">
@@ -50,15 +52,11 @@
         <div class="vidCont">
             <video src="vid/vid3.mp4" autoplay loop muted></video>
         </div>
-
+    </div>
     </main>
 
-    <asidide class="aside1">
-
-
-    </asidide>
-  
-    <footer class="footer1">
+        <footer>
+            <div class="footer">
         <div class="social">
             <h3>Nuestras redes</h3>
         </div>
@@ -81,7 +79,8 @@
 
         <h3 class="footerText"> Copyright @2021 Warrior</h3>
     </footer>
-
+    </div>
+</div>
 </body>
 
 </html>
