--- a/Indumentaria.html
+++ b/Indumentaria.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="headInd">
         <div class="ind1">
             <img src="./img/Logo.png" alt="biker con montalas de fondo">
             <h2 class="h2Ind">Indumentaria</h2>
@@ -32,7 +32,7 @@
 
     </header>
 
-    <main>
+    <main class="mainInd">
         <hr>
         <br>
         <div>
@@ -58,7 +58,7 @@
 
             </div>
     </main>
-    <footer>
+    <footer class="footInd">
         <div class="social">
             <h3>Nuestras redes</h3>
         </div>
@@ -70,7 +70,6 @@
         </ul>
 
         <nav>
-            <hr>
             <ul class="menuFooter">
                 <li><a href="Index.html"> Inicio</a></li>
                 <li><a href="Accesorios.html"> Accesorios</a></li>
