--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="head">
     <header class="Cabecera">
         <img class="head1" src="img/imagen head.png" alt="Ciclista en montañas ciclistas llegando a la meta">
         <h3 class="direccion">Avenida J.D. Perón 2.200 – Yerba Buena – Tucumán LOCAL 2.</h3>
@@ -26,10 +28,12 @@
             </ul>
         </nav>
         <hr>
+    </div>
     </header>
 
 
     <main class="main">
+        <div class="main">
         <div>
             <br><br>
             <div class="loremInd">
@@ -65,10 +69,11 @@
             <img src="./img/bi2.jpeg" alt="Indumentaria" width="200" height="200">
             <br><br>
         </div>
-
+    </div>
     </main>
     <br><br><br>
     <footer>
+        <div class="footer">
         <div class="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3561.2247797303553!2d-65.30367518480399!3d-26.800970495008414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942243af653035db%3A0xcb93db629e38f7f5!2sEstilo%20Biker!5e0!3m2!1ses-419!2sar!4v1638391763351!5m2!1ses-419!2sar"
@@ -96,8 +101,10 @@
             </ul>
         </nav>
         <h3 class="footerText"> Copyright @2021 Warrior</h3>
+    </div>
     </footer>
 
+</div>
 </body>
 
 </html>
