--- a/Accesorios.html
+++ b/Accesorios.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
-    <header>
+    <header class="headAcc">
         <div class="acc1">
             <img src="./img/Logo.png" alt="biker con montanas de fondo">
-            <h2 class="h2">Accesorios</h2>
+
+            <h2 class="h2Acc">Accesorios</h2>
         </div>
         <br>
         <div>
@@ -53,7 +54,7 @@
 
         </div>
     </main>
-    <footer>
+    <footer class="footAcc">
         <div class="social">
             <h3>Nuestras redes</h3>
         </div>
@@ -64,7 +65,6 @@
             <li><i><a href="http://wa.link/m3evpf" class="fab fa-whatsapp-square"></a></i></li><br><br><br>
         </ul>
         <nav>
-            <hr>
             <ul class="menuFooter">
                 <li><a href="Index.html"> Inicio</a></li>
                 <li><a href="Bicicletas.html"> Bicicletas</a></li>
